--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,6 @@
   </head>
   <body id="root">
 
-	<script type="module" src="./src/index.js"></script>
+	<script type="module" src="./src/index.ts"></script>
   </body>
 </html>
