--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>ЧатиК</title>
   </head>
   <body id="root">
+    <main class="page">
 
+    </main>
 	<script type="module" src="./src/index.ts"></script>
   </body>
 </html>
