--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,6 @@
     <title>ЧатиК</title>
   </head>
   <body id="root">
-    <main class="page">
-
-    </main>
-	<script type="module" src="./src/index.ts"></script>
+    <main class="page"></main>
   </body>
 </html>
